--- a/config.json
+++ b/config.json
@@ -25,11 +25,12 @@
         {
           "ad": "https://www.avito.ru/voronezh/predlozheniya_uslug/remont_elektricheskih_boylerov_i_vodonagrevateley_7563760933",
           "category": "https://www.avito.ru/voronezh/predlozheniya_uslug?cd=1&q=бойлер+водонагреватель",
-          "start_price": 500,
           "max_price": 1200,
           "target_place_start": 5,
           "target_place_end": 15,
-          "comment": "Воронеж бойлеры"
+          "comment": "Воронеж бойлеры",
+          "daily_budget": 0,
+          "active": true
         }
       ]
     }
